--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>k8 Page</title>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="white">
     <h1>hellow this my kubernstes project</h1>
 </body>
 </html>
