--- a/form.html
+++ b/form.html
@@ -7,6 +7,6 @@
     <title>k8 Page</title>
 </head>
 <body bgcolor="red">
-    <h1>hellow this my kubernstes project</h1>
+    <h1>Hi sir my kubernstes project successfully completed </h1>
 </body>
 </html>
